tests/regression/errors/basic/undefined_var_25.csd
// Undefined variable test 25
vibez.spill("Using undefined:", undefined_var_25)
sus result drip = missing_variable + 25
